# UnityPackHub

./: .gitignore  CHANGELOG.md  CODING_STANDARDS.md  COMMIT_HISTORY.txt  README.md  REQUIREMENTS.md  package-lock.json  package.json  quasar.config.ts  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: editor_actions.rs  lib.rs  model_preview.rs  package_parser.rs  scanner.rs  unity_bridge.rs  unity_paths.rs
src-tauri/src/bridge/: ModelPreviewBatch.cs  PreviewMaterialSystem.cs  UnityPackHubAssetRenderer.cs  UnityPackHubBridge.cs  UnityPackHubEditorActions.cs  UnityPackHubPreviewManifest.cs  UnityPackHubPreviewMatcher.cs  UnityPackHubPreviewProtocol.cs  UnityPackHubPreviewRenderer.cs
src/components/: AssetCard.vue  AssetDetailDrawer.vue  AssetGrid.vue  ModelClassificationBar.vue  MultiSelectToolbar.vue  SettingsDialog.vue  SideBar.vue  StatusBar.vue  TagPill.vue  TopBar.vue
src/composables/: useAssetDetailActions.ts  useBatchAssetActions.ts  useModelPreviewBatch.ts  useModelShowcase.ts  useOfficialCover.ts  usePackageShowcase.ts  useSidebarManagement.ts  useUnityPackagePreviews.ts
src/constants/: index.ts
src/css/: app.scss
src/pages/: MainPage.vue
src/router/: routes.ts
src/services/: assetCoverService.ts  classificationService.ts  commandManager.ts  coverFetcher.ts  database.ts  eventBus.ts  i18n.ts  modelPreviewConstants.ts  modelPreviewService.ts  packagePreviewFile.ts  packagePreviewIdentity.ts  scanner.ts  shaderAdapterTemplate.ts  tauriCommands.ts  unityAssetStoreClient.ts  unityImporter.ts  (+1 more)
(+67 files in other folders)
